--- a/index.html
+++ b/index.html
@@ -1,19 +1,331 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>اپلیکیشن ناین مووی</title>
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#292a2b">
-<meta name="msapplication-TileColor" content="#000000">
-<meta name="theme-color" content="#ffffff">
-</head>
-<body>
-  
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<html lang="zxx">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="اپلیکیشن ناین مووی" />
+    <meta name="description" content="ناین مووی - گروه برنامه نویسی پسندیده" />
+    <title>اپلیکیشن ناین مووی</title>
+
+    <!--favicon icons link-->
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#292a2b">
+    <meta name="msapplication-TileColor" content="#000000">
+    <meta name="theme-color" content="#ffffff">
+
+    <!--font-awesome icons link-->
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/venobox.css">
+    <link rel="stylesheet" href="css/killercarousel.css">
+    <!--main style file-->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/rtl.css">
+</head>
+
+<body id="index2">
+    <!-- perloader part start -->
+    <div id="main-preloader" class="main-preloader semi-dark-background">
+        <div class="main-preloader-inner center">
+
+            <div class="preloader-percentage center">
+                <div class="object object_one"></div>
+                <div class="object object_two"></div>
+                <div class="object object_three"></div>
+                <div class="object object_four"></div>
+                <div class="object object_five"></div>
+            </div>
+            <div class="preloader-bar-outer">
+                <div class="preloader-bar"></div>
+            </div>
+        </div>
+    </div>
+    <!-- perloader part start -->
+
+    <!-- HEADER AREA START -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+        <div class="container">
+            <img style="width: 150px;height: 72.5px;" src="logo.png">
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+            </button>
+
+            <div class="collapse navbar-collapse menu-main" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto menu-item">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#banner">صفحه نخست</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#screenshot">اسکرین‌شات‌ها</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#faq">سوالات متداول</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#testimonial">دیدگاه‌ها</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav-account" href="#">
+                            <span>دانلود اپلیکیشن</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a target="_blank" class="nav-link nav-account" href="https://9movis17.pw/panel/?action=vip">
+                            <span>خرید اشتراک</span>
+                        </a>
+                    </li>
+                    </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- HEADER AREA END -->
+
+    <!-- BANNER AREA START -->
+    <section id="banner">
+		<div class=".particles-js-canvas-el" id="particles-js"></div>
+        <div class="container zindex2">
+            <div class="row">
+                <div class="col-lg-5 col-md-6 banner-text">
+                    <img style="width: 47.42px;height: auto;margin-bottom: 16px;" src="android-avatar.webp">
+                    <h3>اپلیکیشن موبایل و تبلت اندروید</h3>
+                    <p>اپلیکیشن اندروید ناین مووی را می‌توانید از طریق دکمه‌ زیر دریافت نمایید.</p>
+                    <a href="#">دانلود آخرین نسخه</a>
+                </div>
+                <div class="col-lg-7 col-md-6">
+                    <div class="banner-img">
+                        <div class="circle"></div>
+                        <img src="images/1.1.png" alt="banner-img" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- BANNER AREA END -->
+
+    <!-- SCREENSHOT AREA START -->
+    <section id="screenshot">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center overview-head down-oh">
+                    <h2>اسکرین شات ها</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="kc-wrap">
+                    <!-- Carousel items follow -->
+                    <div class="kc-item">
+                        <img src="images/s1.png" alt="s1-img">
+                    </div>
+                    <div class="kc-item">
+                        <img src="images/s2.png" alt="s2-img">
+                    </div>
+                    <div class="kc-item">
+                        <img src="images/s3.png" alt="s3-img">
+                    </div>
+                    <div class="kc-item">
+                        <img src="images/s4.png" alt="s4-img">
+                    </div>
+                    <div class="kc-item">
+                        <img src="images/s5.png" alt="s5-img">
+                    </div>
+                    <div class="kc-item">
+                        <img src="images/s6.png" alt="s6-img">
+                    </div>
+                    <div class="kc-item">
+                        <img src="images/s7.png" alt="s7-img">
+                    </div>
+                    <div class="kc-item">
+                        <img src="images/s1.png" alt="s1-img">
+                    </div>
+                    <div class="kc-item">
+                        <img src="images/s2.png" alt="s2-img">
+                    </div>
+                    <div class="kc-item">
+                        <img src="images/s3.png" alt="s3-img">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- SCREENSHOT AREA END -->
+
+    <!-- FAQ AREA START -->
+    <section id="faq">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center overview-head wh mix-pro">
+                    <h2>سوالات متداول</h2>
+                </div>
+            </div>
+            <div class="row f-p">
+                <div class="col-lg-6 f-text2">
+                    <div class="pro-text">
+                        <h2>به جزئیات بیشتری نیاز دارید؟</h2>
+                        <h3>از کارشناسان بپرسید</h3>
+                    </div>
+                    <div class="accordion" id="accordionExample">
+                        <div class="card">
+                            <div class="card-header" id="headingOne">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                        ۱. چگونه اپلیکیشن را نصب کنم؟
+                                    </button>
+                                </h2>
+                            </div>
+                            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="headingTwo">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                        ۲. یک سوال آزمایشی درباره اپلیکیشن؟
+                                    </button>
+                                </h2>
+                            </div>
+                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="headingThree">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                        ۳. چرا نسخه پولی را خریداری کنید؟
+                                    </button>
+                                </h2>
+                            </div>
+                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-10 m-md-auto f-img">
+                    <img src="images/lg.png" alt="feature-img" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- FAQ AREA END -->
+
+    <!--  TESTIMONIAL AREA START -->
+    <section id="testimonial">
+        <div class="container zindex2">
+            <div class="row">
+                <div class="col-lg-12 text-center overview-head">
+                    <h2>دیدگاه کاربران</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="testimonial-main">
+                        <div class="testimonial-item text-center">
+                            <i class="fa fa-quote-left" aria-hidden="true"></i>
+                            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
+                            <h3>علی احمدی</h3>
+                            <span>توسعه دهنده نرم افزار</span>
+                        </div>
+                        <div class="testimonial-item text-center">
+                            <i class="fa fa-quote-left" aria-hidden="true"></i>
+                            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
+                            <h3>مینا رضایی</h3>
+                            <span>طراح رابط کاربری</span>
+                        </div>
+                        <div class="testimonial-item text-center">
+                            <i class="fa fa-quote-left" aria-hidden="true"></i>
+                            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
+                            <h3>استیو جابز</h3>
+                            <span>طراح گرافیک</span>
+                        </div>
+                        <div class="testimonial-item text-center">
+                            <i class="fa fa-quote-left" aria-hidden="true"></i>
+                            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
+                            <h3>بیل گیتس</h3>
+                            <span>کارشناس بازاریابی</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 m-auto">
+                    <div class="testimonial-main-img">
+                        <div class="testimonial-img-item text-center">
+                            <img src="images/testimonial3.png" alt="user-img" class="img-fluid">
+                        </div>
+                        <div class="testimonial-img-item text-center">
+                            <img src="images/testimonial1.png" alt="user-img" class="img-fluid">
+                        </div>
+                        <div class="testimonial-img-item text-center">
+                            <img src="images/testimonial3.png" alt="user-img" class="img-fluid">
+                        </div>
+                        <div class="testimonial-img-item text-center">
+                            <img src="images/testimonial.png" alt="user-img" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--  TESTIMONIAL AREA END -->
+
+    <!-- BANNER AREA START -->
+    <section style="border-bottom-right-radius:0px" id="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-md-6 banner-text">
+                    <img style="width: auto;height: 32px;margin-bottom: 16px;" src="android-tv.webp">
+                    <h3>نسخه اندروید تی‌وی</h3>
+                    <p>به زودی منظر انتشار نسخه اندروید تی‌وی باشید.</p>
+                </div>
+                <div class="col-lg-7 col-md-6">
+                    <div class="banner-img">
+                        <img src="images/tv-blur-out1.png" alt="banner-img" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- BANNER AREA END -->
+
+    <!--  COPYRIGHT AREA START -->
+    <div style="background: linear-gradient(to right, #4F65E8, #4050B5);" id="copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center copyright-text">
+                    <p>تمامی حقوق این وب‌سایت و اپلیکیشن محفوظ و برای ناین مووی می‌باشد.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--  COPYRIGHT AREA END -->
+
+    <!-- Optional JavaScript -->
+    <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/killercarousel.js"></script>
+    <script src="js/particles.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/venobox.min.js"></script>
+    <script src="js/circular.js"></script>
+    <script src="js/custom.js"></script>
 </body>
+
 </html>
