--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="اپلیکیشن ناین مووی" />
-    <meta name="description" content="ناین مووی - گروه برنامه نویسی پسندیده" />
     <title>اپلیکیشن ناین مووی</title>
 
     <!--favicon icons link-->
@@ -169,21 +168,20 @@
             <div class="row f-p">
                 <div class="col-lg-6 f-text2">
                     <div class="pro-text">
-                        <h2>به جزئیات بیشتری نیاز دارید؟</h2>
-                        <h3>از کارشناسان بپرسید</h3>
+                        <h5>سوالات شایع سایر کاربران که شاید برای شما هم پیش آمده باشد:</h5>
                     </div>
                     <div class="accordion" id="accordionExample">
                         <div class="card">
                             <div class="card-header" id="headingOne">
                                 <h2 class="mb-0">
                                     <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                        ۱. چگونه اپلیکیشن را نصب کنم؟
+                                        ۱. آیا برای استفاده از سرویس شما نیاز به تهیه اشتراک است ؟ 
                                     </button>
                                 </h2>
                             </div>
                             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                                 <div class="card-body">
-                                    آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند
+                                    دانلود و تماشای آنلاین عناوین در سرویس ما نیاز به پرداخت حق اشتراک دارد. با پرداخت حق اشتراک شما به دسترسی نامحدود به تمامی امکانات و محتوی را خواهید داشت. 
                                 </div>
                             </div>
                         </div>
@@ -191,13 +189,13 @@
                             <div class="card-header" id="headingTwo">
                                 <h2 class="mb-0">
                                     <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        ۲. یک سوال آزمایشی درباره اپلیکیشن؟
+                                        ۲. آیا امکان دانلود عناوین در سرویس شما وجود دارد ؟
                                     </button>
                                 </h2>
                             </div>
                             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                                 <div class="card-body">
-                                    آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند
+                                   بله. شما با خرید اشتراک سرویس ما، مادامی که دارای اشتراک باشید؛ قادر خواهید بود هر محتوی که علاقه داشتید را با کیفیت های متفاوت دانلود نمایید. 
                                 </div>
                             </div>
                         </div>
@@ -205,13 +203,27 @@
                             <div class="card-header" id="headingThree">
                                 <h2 class="mb-0">
                                     <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                        ۳. چرا نسخه پولی را خریداری کنید؟
+                                        ۳. آیا امکان تماشای آنلاین عناوین بدون دانلود در سرویس شما وجود دارد ؟
                                     </button>
                                 </h2>
                             </div>
                             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                 <div class="card-body">
-                                    آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند
+                                   بله. در حال حاضر امکان تماشای آنلاین در اپلیکیشن ما مقدور بوده و بزودی این بخش به وبسایت نیز اضافه خواهد شد. 
+                                </div>
+                            </div>
+                        </div>
+			<div class="card">
+                            <div class="card-header" id="headingThree">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                        ۴. آیا سرویس شما برای خارج از ایران قابل دسترس است ؟ 
+                                    </button>
+                                </h2>
+                            </div>
+                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                                <div class="card-body">
+                                   خیر. در حال حاضر قابلیت استفاده از خدمات ما فقط در ایران امکان پذیر است. 
                                 </div>
                             </div>
                         </div>
@@ -238,27 +250,21 @@
                     <div class="testimonial-main">
                         <div class="testimonial-item text-center">
                             <i class="fa fa-quote-left" aria-hidden="true"></i>
-                            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
-                            <h3>علی احمدی</h3>
-                            <span>توسعه دهنده نرم افزار</span>
+                            <p>چند ساله از سایت 9مووی استفاده میکنم، واقعا تیم پاسخ گو و صمیمی دارند.</p>
+                            <h3>مهسا</h3>
+                            <span>کاربر</span>
                         </div>
                         <div class="testimonial-item text-center">
                             <i class="fa fa-quote-left" aria-hidden="true"></i>
-                            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
-                            <h3>مینا رضایی</h3>
-                            <span>طراح رابط کاربری</span>
+                            <p>یک اپلیکیشن تمام و کمال ، چیزی کم نداره . دانلودش رو پیشنهاد میکنم.</p>
+                            <h3>علی</h3>
+                            <span>کاربر</span>
                         </div>
                         <div class="testimonial-item text-center">
                             <i class="fa fa-quote-left" aria-hidden="true"></i>
-                            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
-                            <h3>استیو جابز</h3>
-                            <span>طراح گرافیک</span>
-                        </div>
-                        <div class="testimonial-item text-center">
-                            <i class="fa fa-quote-left" aria-hidden="true"></i>
-                            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
-                            <h3>بیل گیتس</h3>
-                            <span>کارشناس بازاریابی</span>
+                            <p>پخش آنلاین آپلیکیشن یک جوری خوبه ، نمیتونم ولش کنم.</p>
+                            <h3>رضا</h3>
+                            <span>کاربر</span>
                         </div>
                     </div>
                 </div>
