--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <!-- BANNER AREA START -->
     <section id="banner">
-		<div class=".particles-js-canvas-el" id="particles-js"></div>
+	<div class=".particles-js-canvas-el" id="particles-js"></div>
         <div class="container zindex2">
             <div class="row">
                 <div class="col-lg-5 col-md-6 banner-text">
@@ -168,7 +168,7 @@
             <div class="row f-p">
                 <div class="col-lg-6 f-text2">
                     <div class="pro-text">
-                        <h5>سوالات شایع سایر کاربران که شاید برای شما هم پیش آمده باشد:</h5>
+                        <h3 style="color:white" >سوالات شایع سایر کاربران که شاید برای شما هم پیش آمده باشد:</h3>
                     </div>
                     <div class="accordion" id="accordionExample">
                         <div class="card">
@@ -251,13 +251,13 @@
                         <div class="testimonial-item text-center">
                             <i class="fa fa-quote-left" aria-hidden="true"></i>
                             <p>چند ساله از سایت 9مووی استفاده میکنم، واقعا تیم پاسخ گو و صمیمی دارند.</p>
-                            <h3>مهسا</h3>
+                            <h3>علی</h3>
                             <span>کاربر</span>
                         </div>
                         <div class="testimonial-item text-center">
                             <i class="fa fa-quote-left" aria-hidden="true"></i>
                             <p>یک اپلیکیشن تمام و کمال ، چیزی کم نداره . دانلودش رو پیشنهاد میکنم.</p>
-                            <h3>علی</h3>
+                            <h3>مهسا</h3>
                             <span>کاربر</span>
                         </div>
                         <div class="testimonial-item text-center">
