--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <p>اپلیکیشن اندروید ناین مووی را می‌توانید از طریق دکمه‌ زیر دریافت نمایید.</p>
                     <a href="https://github.com/9mstore/9mstore.github.io/releases/download/v1.5.3/9movie.apk">دانلود نسخه اندروید</a>
 
-		    <a href="https://github.com/9mstore/9mstore.github.io/releases/download/v1.0.0/9movieTV.apk">دانلود نسخه اندروید TV</a>
+		    <a href="https://github.com/9mstore/9mstore.github.io/releases/download/v1.5.3/9movieTV-v1.0.0.apk">دانلود نسخه اندروید TV</a>
                 </div>
                 <div class="col-lg-7 col-md-6">
                     <div class="banner-img">
