--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a target="_blank" class="nav-link nav-account" href="https://9movie.tv/panel/?action=vip">
+                        <a target="_blank" class="nav-link nav-account" href="https://9movie.tv/pricing">
                             <span>خرید اشتراک</span>
                         </a>
                     </li>
@@ -98,8 +98,6 @@
                     <h3>اپلیکیشن موبایل و تبلت اندروید</h3>
                     <p>اپلیکیشن اندروید ناین مووی را می‌توانید از طریق دکمه‌ زیر دریافت نمایید.</p>
                     <a href="https://github.com/9mstore/9mstore.github.io/releases/download/v1.5.5/9movie.apk">دانلود نسخه اندروید</a>
-
-		    <a href="https://github.com/9mstore/9mstore.github.io/releases/download/v1.5.3/9movieTV-v1.0.0.apk">دانلود نسخه اندروید TV</a>
                 </div>
                 <div class="col-lg-7 col-md-6">
                     <div class="banner-img">
@@ -211,21 +209,21 @@
                             </div>
                             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                 <div class="card-body">
-                                   بله. در حال حاضر امکان تماشای آنلاین در اپلیکیشن ما مقدور بوده و بزودی این بخش به وبسایت نیز اضافه خواهد شد. 
+                                   بله. تمامی اشتراک های ما هم قابلیت پخش انلاین به همراه زیرنویس را دارند و در صورت استفاده از پخش آنلاین نیازی به دانلود محتوی و نگهداری در سیستم شخصی خود ندارید.
                                 </div>
                             </div>
                         </div>
 			<div class="card">
-                            <div class="card-header" id="headingThree">
+                            <div class="card-header" id="headingFour">
                                 <h2 class="mb-0">
-                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                                         ۴. آیا سرویس شما برای خارج از ایران قابل دسترس است ؟ 
                                     </button>
                                 </h2>
                             </div>
-                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                            <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
                                 <div class="card-body">
-                                   خیر. در حال حاضر قابلیت استفاده از خدمات ما فقط در ایران امکان پذیر است. 
+                                   بله. سرویس های 9 مووی قابلیت استفاده در خارج از کشور و یا با فیلترشکن را دارا میباشند و برای استفاده از سرویس محدودیتی ندارید.
                                 </div>
                             </div>
                         </div>
@@ -252,20 +250,26 @@
                     <div class="testimonial-main">
                         <div class="testimonial-item text-center">
                             <i class="fa fa-quote-left" aria-hidden="true"></i>
-                            <p>چند ساله از سایت 9مووی استفاده میکنم، واقعا تیم پاسخ گو و صمیمی دارند.</p>
-                            <h3>علی</h3>
+                            <p>9 مووی یجوری داره پیش میره که از همه سایت های معلوم الحال مشابه با قیمت های فضایی بهتره. </p>
+                            <h3>ماهان</h3>
                             <span>کاربر</span>
                         </div>
                         <div class="testimonial-item text-center">
                             <i class="fa fa-quote-left" aria-hidden="true"></i>
-                            <p>یک اپلیکیشن تمام و کمال ، چیزی کم نداره . دانلودش رو پیشنهاد میکنم.</p>
-                            <h3>مهسا</h3>
+                            <p>از اول با  ناین مووی بودم، واقعا بهبود تو سیستمشون مشخصه . هر قابلیتی که میخوایم تو کم ترین مدت اضافه میشه. </p>
+                            <h3>موریس</h3>
                             <span>کاربر</span>
                         </div>
                         <div class="testimonial-item text-center">
                             <i class="fa fa-quote-left" aria-hidden="true"></i>
-                            <p>پخش آنلاین آپلیکیشن یک جوری خوبه ، نمیتونم ولش کنم.</p>
-                            <h3>رضا</h3>
+                            <p>اپلیکیشن اندروید تی وی 9 مووی یجوری کیفیت 4K پخش میکنه تو تلویزیونمون که زندگی معنادار شده. </p>
+                            <h3>هلنا</h3>
+                            <span>کاربر</span>
+                        </div>
+                        <div class="testimonial-item text-center">
+                            <i class="fa fa-quote-left" aria-hidden="true"></i>
+                            <p>چقد 9MOVIE و مدیراش خوبن، یجوری رسیدگی میشه به موارد که برگات میریزه.</p>
+                            <h3>حمید</h3>
                             <span>کاربر</span>
                         </div>
                     </div>
@@ -300,11 +304,13 @@
                 <div class="col-lg-5 col-md-6 banner-text">
                     <img style="width: auto;height: 32px;margin-bottom: 16px;" src="android-tv.webp">
                     <h3>نسخه اندروید تی‌وی</h3>
-                    <p>به زودی منظر انتشار نسخه اندروید تی‌وی باشید.</p>
+                    <p>دانلود اپلیکیشن اندروید تی وی ناین مووی برای تلویزیون های هوشمند اندرویدی</p>
+		            <a href="https://github.com/9mstore/9mstore.github.io/releases/download/v1.5.3/9movieTV-v1.0.0.apk">دانلود نسخه اندروید TV</a>
+		            <a href="https://9movie.tv/android-tv-setup">آموزش نصب</a>
                 </div>
                 <div class="col-lg-7 col-md-6">
                     <div class="banner-img">
-                        <img src="images/tv-blur-out1.png" alt="banner-img" class="img-fluid">
+                        <img src="images/tv-out.png" alt="banner-img" class="img-fluid">
                     </div>
                 </div>
             </div>
