--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="css/venobox.css">
     <link rel="stylesheet" href="css/killercarousel.css">
     <!--main style file-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=0.01">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/rtl.css">
 </head>
