--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                     <h3>اپلیکیشن موبایل و تبلت اندروید</h3>
                     <p>اپلیکیشن اندروید ناین مووی را می‌توانید از طریق دکمه‌ زیر دریافت نمایید.</p>
                     <a href="https://github.com/9mstore/9mstore.github.io/releases/download/v1.5.9/9movie.apk">دانلود نسخه اندروید</a>
+		    <a style="margin-right: 10px;" href="https://github.com/9mstore/9mstore.github.io/releases/download/v1.5.9/9movieTV-v1.1.3.apk">دانلود نسخه اندروید TV</a>
                 </div>
                 <div class="col-lg-7 col-md-6">
                     <div class="banner-img">
