--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
             <div class="row">
                 <div class="col-lg-5 col-md-6 banner-text">
                     <img style="width: 47.42px;height: auto;margin-bottom: 16px;" src="android-avatar.webp">
-                    <h3>اپلیکیشن موبایل و تبلت اندروید</h3>
-                    <p>اپلیکیشن اندروید ناین مووی را می‌توانید از طریق دکمه‌ زیر دریافت نمایید.</p>
-                    <a href="https://github.com/9mstore/9mstore.github.io/releases/download/v1.5.9/9movie.apk">دانلود نسخه اندروید</a>
-		    <a style="margin-right: 10px;" href="https://github.com/9mstore/9mstore.github.io/releases/download/v1.5.9/9movieTV-v1.1.3.apk">دانلود نسخه اندروید TV</a>
+                    <h3>اپلیکیشن موبایل، تبلت و تلوزیون ناین مووی</h3>
+                    <p>اپلیکیشن اندروید و اندروید TV ناین مووی را می‌توانید از طریق دکمه‌ زیر دانلود نمایید.</p>
+                    <a href="https://github.com/9mstore/9mstore.github.io/releases/download/v1.5.9/9movie.apk">نسخه اندروید</a>
+		    <a style="margin-right: 10px;" href="https://github.com/9mstore/9mstore.github.io/releases/download/v1.5.9/9movieTV-v1.1.3.apk">نسخه اندروید TV</a>
                 </div>
                 <div class="col-lg-7 col-md-6">
                     <div class="banner-img">
