--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="اپلیکیشن ناین مووی" />
-    <title>اپلیکیشن ناین مووی</title>
+    <meta name="keywords" content="اپلیکیشن های ناین مووی" />
+    <title>اپلیکیشن های ناین مووی</title>
 
     <!--favicon icons link-->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -73,12 +73,7 @@
                         <a class="nav-link" href="#testimonial">دیدگاه‌ها</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-account" href="https://github.com/9mstore/9mstore.github.io/releases/download/v2.3.0/9movie.apk">
-                            <span>دانلود اپلیکیشن</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a target="_blank" class="nav-link nav-account" href="https://9movie.tv/pricing">
+                        <a target="_blank" class="nav-link nav-account" href="https://9movie.org/pricing">
                             <span>خرید اشتراک</span>
                         </a>
                     </li>
@@ -99,6 +94,7 @@
                     <p>اپلیکیشن اندروید و اندروید TV ناین مووی را می‌توانید از طریق دکمه‌ زیر دانلود نمایید.</p>
                     <a href="https://github.com/9mstore/9mstore.github.io/releases/download/v2.3.0/9movie.apk">نسخه اندروید</a>
 		    <a style="margin-right: 10px;" href="https://github.com/9mstore/9mstore.github.io/releases/download/v2.3.0/9movieTV-v1.8.0.apk">نسخه اندروید TV</a>
+					<a style="margin-right: 10px;" href="https://9movie.org/application-landing">نسخه ویندوز</a>
                 </div>
                 <div class="col-lg-7 col-md-6">
                     <div class="banner-img">
@@ -307,7 +303,6 @@
                     <h3>نسخه اندروید تی‌وی</h3>
                     <p>دانلود اپلیکیشن اندروید تی وی ناین مووی برای تلویزیون های هوشمند اندرویدی</p>
 		            <a href="https://github.com/9mstore/9mstore.github.io/releases/download/v2.3.0/9movieTV-v1.8.0.apk">دانلود نسخه اندروید TV</a>
-		            <a href="https://9movie.tv/android-tv-setup">آموزش نصب</a>
                 </div>
                 <div class="col-lg-7 col-md-6">
                     <div class="banner-img">
@@ -344,4 +339,3 @@
 </body>
 
 </html>
-
