--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <a href="https://github.com/9mstore/9mstore.github.io/releases/download/v2.3.0/9movie.apk">نسخه اندروید</a>
 		    <a style="margin-right: 10px;" href="https://github.com/9mstore/9mstore.github.io/releases/download/v2.3.0/9movieTV-v1.8.0.apk">نسخه اندروید TV</a>
 					<br>
-					<a href="https://9movie.org/application-landing">نسخه ویندوز</a>
+					<a style="margin-top: 20px;" href="https://9movie.org/application-landing">نسخه ویندوز</a>
                 </div>
                 <div class="col-lg-7 col-md-6">
                     <div class="banner-img">
